# Setuptools version required for PEP 639
[build-system]
requires = [
    "setuptools >= 77.0",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "vanderwb-test-package"
dynamic = [ "version" ]
authors = [
  { name="Brian Vanderwende", email="vanderwb@ucar.edu" },
]
description = "A package for tesing packaging"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]

license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/vanderwb/vanderwb-test-package"
issues = "https://github.com/vanderwb/vanderwb-test-package/issues"

[tool.setuptools_scm]
